doc/idea/proto/compiler/wrdcBison.output
Terminals unused in grammar

    tthis
    tnode
    tfres


State 22 conflicts: 1 shift/reduce
State 33 conflicts: 3 shift/reduce
State 49 conflicts: 1 shift/reduce
State 51 conflicts: 1 shift/reduce
State 69 conflicts: 2 shift/reduce
State 79 conflicts: 4 reduce/reduce
State 88 conflicts: 24 shift/reduce
State 112 conflicts: 5 shift/reduce
State 118 conflicts: 1 reduce/reduce
State 126 conflicts: 22 shift/reduce
State 132 conflicts: 24 shift/reduce
State 142 conflicts: 1 shift/reduce
State 151 conflicts: 22 shift/reduce
State 152 conflicts: 22 shift/reduce
State 154 conflicts: 2 reduce/reduce
State 191 conflicts: 24 shift/reduce
State 193 conflicts: 24 shift/reduce
State 201 conflicts: 5 shift/reduce
State 208 conflicts: 22 shift/reduce
State 209 conflicts: 22 shift/reduce
State 213 conflicts: 24 shift/reduce
State 221 conflicts: 1 shift/reduce
State 223 conflicts: 5 shift/reduce
State 224 conflicts: 5 shift/reduce
State 225 conflicts: 5 shift/reduce
State 226 conflicts: 5 shift/reduce
State 227 conflicts: 5 shift/reduce
State 228 conflicts: 5 shift/reduce
State 229 conflicts: 5 shift/reduce
State 235 conflicts: 3 reduce/reduce
State 238 conflicts: 5 shift/reduce
State 239 conflicts: 5 shift/reduce
State 240 conflicts: 5 shift/reduce
State 241 conflicts: 5 shift/reduce
State 242 conflicts: 5 shift/reduce
State 243 conflicts: 5 shift/reduce
State 244 conflicts: 22 shift/reduce
State 245 conflicts: 1 reduce/reduce
State 247 conflicts: 5 shift/reduce
State 248 conflicts: 5 shift/reduce
State 249 conflicts: 5 shift/reduce
State 250 conflicts: 5 shift/reduce
State 251 conflicts: 5 shift/reduce
State 252 conflicts: 5 shift/reduce
State 253 conflicts: 5 shift/reduce
State 254 conflicts: 5 shift/reduce
State 255 conflicts: 5 shift/reduce
State 256 conflicts: 5 shift/reduce
State 257 conflicts: 1 reduce/reduce
State 267 conflicts: 24 shift/reduce


Grammar

    0 $accept: tfile $end

    1 tid: tnormalId
    2    | taccessedId

    3 telseBlock: teol telse tindentBlock

    4 telifBlock: teol telif tbranch

    5 telifBlocks: telifBlock
    6            | telifBlocks telifBlock

    7 tbranch: trhsIdExpr tindentBlock

    8 termFor: tfor tid tin trhsIdExpr tindentBlock
    9        | tfor trhsIdExpr tindentBlock

   10 tcaseExpr: trhsIdExpr
   11          | tcaseExpr ',' trhsIdExpr

   12 tcaseStmt: tcaseExpr tindentBlock
   13          | telse tindentBlock

   14 tcaseIndentBlock: tcaseStmt
   15                 | tcaseIndentBlock tcaseStmt

   16 tswitchExpr: tswitch tlhsId teol tindent tcaseIndentBlock tdedent

   17 termIf: tif tbranch telifBlocks telseBlock
   18       | tif tbranch telifBlocks
   19       | tif tbranch telseBlock
   20       | tif tbranch

   21 trhsIdExpr: tbool
   22           | tnum
   23           | tstr
   24           | tchar
   25           | tswitchExpr
   26           | tarray
   27           | tnormalId
   28           | tmap
   29           | tdefexpr
   30           | tcast
   31           | tsafeAccess
   32           | taccess
   33           | '(' trhsIdExpr ')'
   34           | topUplus trhsIdExpr
   35           | trhsIdExpr topUplus
   36           | topUminus trhsIdExpr
   37           | trhsIdExpr topUminus
   38           | tconAccess
   39           | trhsIdExpr '+' trhsIdExpr
   40           | trhsIdExpr '-' trhsIdExpr
   41           | trhsIdExpr '*' trhsIdExpr
   42           | trhsIdExpr '/' trhsIdExpr
   43           | trhsIdExpr '%' trhsIdExpr
   44           | trhsIdExpr '^' trhsIdExpr
   45           | trhsIdExpr '<' trhsIdExpr
   46           | trhsIdExpr topLessEqual trhsIdExpr
   47           | trhsIdExpr '>' trhsIdExpr
   48           | trhsIdExpr topMoreEqual trhsIdExpr
   49           | trhsIdExpr topEqual trhsIdExpr
   50           | trhsIdExpr topRefEqual trhsIdExpr
   51           | trhsIdExpr topNotEqual trhsIdExpr
   52           | trhsIdExpr topNotRefEqual trhsIdExpr
   53           | trhsIdExpr '&' trhsIdExpr
   54           | trhsIdExpr '|' trhsIdExpr
   55           | termFor
   56           | tseq
   57           | twith tnormalId tindentBlock
   58           | twith tindentBlock
   59           | termIf
   60           | tfuncCall
   61           | tnormalId topPlusAssign trhsIdExpr
   62           | tnormalId topMinusAssign trhsIdExpr
   63           | tnormalId topSquareAssign trhsIdExpr
   64           | tnormalId topDivideAssign trhsIdExpr
   65           | tnormalId topModAssign trhsIdExpr
   66           | tnormalId topPowAssign trhsIdExpr
   67           | tnormalId '=' trhsIdExpr

   68 tdefBlockExpr: tfunc
   69              | tdefOrigin
   70              | tpropexpr
   71              | tctorfunc
   72              | tdtorfunc

   73 tdefexpr: tid topDefAssign trhsIdExpr
   74         | tid ttype topDefAssign trhsIdExpr
   75         | tid ttype topDefAssign '{' '}'
   76         | tparam
   77         | takaStmt
   78         | tdefBlockExpr

   79 tconNames: tconName '{' '}'
   80          | tconNames '{' '}'
   81          | tconName '{' ttype '}'
   82          | tconNames '{' ttype '}'

   83 ttype: tlhsId
   84      | tconNames

   85 tconAccess: tlhsId '[' trhsIdExpr ']'

   86 takaStmt: tlhsId taka tnormalId
   87         | tfunc taka tnormalId

   88 tcast: trhsIdExpr tas ttype

   89 treturnexpr: tret trhsIdExpr
   90            | treturn trhsIdExpr

   91 trhsIds: trhsIdExpr ',' trhsIdExpr
   92        | trhsIds ',' trhsIdExpr

   93 trhslist: '(' trhsIds ')'

   94 tlhsId: tnormalId
   95       | tpackAccess

   96 ttuple: trhsIdExpr ';' trhsIdExpr

   97 ttuples: ttuple
   98        | ttuples ',' ttuple

   99 tmap: '{' ttuples '}'

  100 tarray: '{' trhsIds '}'

  101 tseq: trhsIdExpr topSeq trhsIdExpr

  102 taccess: trhsIdExpr '.' tnormalId
  103        | trhsIdExpr '.' tfuncCall

  104 tpackAccess: tlhsId '.' tnormalId
  105            | tlhsId '.' tfuncCall

  106 tsafeAccess: trhsIdExpr topSafeNavi tnormalId
  107            | trhsIdExpr topSafeNavi tfuncCall

  108 tparam: tid ttype
  109       | '@' tid

  110 tparams: tparam
  111        | tparams ',' tparam

  112 tfuncRhsList: trhslist
  113             | '(' ')'
  114             | '(' trhsIdExpr ')'

  115 tpropexpr: tprop tid tfrom trhsIdExpr tpropIndentBlock
  116          | tprop tid tfuncRhsList tfrom trhsIdExpr tpropIndentBlock
  117          | tprop tfrom trhsIdExpr tpropIndentBlock
  118          | tprop tfuncRhsList tfrom trhsIdExpr tpropIndentBlock

  119 tpropIndentBlock: teol tindent tpropBlock tdedent
  120                 | ':' tgetsetterExpr
  121                 | %empty

  122 tpropBlock: tgetsetterStmt
  123           | tpropBlock tgetsetterStmt

  124 tgetsetFuncName: tfget
  125                | tfset

  126 tgetsetList: tfunclist
  127            | %empty

  128 tgetsetterExpr: tgetsetFuncName tgetsetList tindentBlock

  129 tgetsetterStmt: tgetsetterExpr teol

  130 tdefOrigin: tdef tid tdefIndentBlock
  131           | tdef tid tfuncRhsList tdefIndentBlock
  132           | tdef tid tfuncRhsList tfrom trhsIdExpr tdefIndentBlock
  133           | tdef tid tfrom trhsIdExpr tdefIndentBlock

  134 tfunclist: '(' ')'
  135          | '(' tparams ')'

  136 tfunc: tid tfunclist ttype tfuncBody
  137      | tas tfunclist ttype tfuncBody
  138      | tid tfunclist tfuncBody
  139      | tfunclist ttype tfuncBody
  140      | tfunclist tfuncBody

  141 tfuncBody: tindentBlock
  142          | '=' tnull

  143 tctorfunc: tfctor tfunclist tindentBlock

  144 tdtorfunc: tfdtor tfunclist tindentBlock

  145 tfuncCall: tid tfuncRhsList

  146 texpr: trhsIdExpr
  147      | treturnexpr
  148      | tnext

  149 tblock: texpr
  150       | tblock teol texpr
  151       | tblock teof

  152 tdefBlock: tdefexpr
  153          | tdefBlock teol tdefexpr

  154 tpackExpr: tpack tlhsId

  155 timportExpr: timport tlhsId
  156            | timport tlhsId taka tnormalId

  157 tfileExpr: tpackExpr
  158          | timportExpr
  159          | tdefexpr

  160 tdefIndentBlock: teol tindent tdefBlock tdedent
  161                | ':' tdefexpr
  162                | %empty

  163 tindentBlock: teol tindent tblock tdedent
  164             | ':' trhsIdExpr
  165             | ':' treturnexpr
  166             | ':' tnext

  167 tfile: tfile teol tfileExpr
  168      | tfileExpr
  169      | tfile teof


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 43
    '&' (38) 53
    '(' (40) 33 93 113 114 134 135
    ')' (41) 33 93 113 114 134 135
    '*' (42) 41
    '+' (43) 39
    ',' (44) 11 91 92 98 111
    '-' (45) 40
    '.' (46) 102 103 104 105
    '/' (47) 42
    ':' (58) 120 161 164 165 166
    ';' (59) 96
    '<' (60) 45
    '=' (61) 67 142
    '>' (62) 47
    '@' (64) 109
    '[' (91) 85
    ']' (93) 85
    '^' (94) 44
    '{' (123) 75 79 80 81 82 99 100
    '|' (124) 54
    '}' (125) 75 79 80 81 82 99 100
    error (256)
    tpack (258) 154
    tswitch (259) 16
    tas (260) 88 137
    tfor (261) 8 9
    tdef (262) 130 131 132 133
    twith (263) 57 58
    tret (264) 89
    treturn (265) 90
    tif (266) 17 18 19 20
    telse (267) 3 13
    telif (268) 4
    tfrom (269) 115 116 117 118 132 133
    tnext (270) 148 166
    tprop (271) 115 116 117 118
    timport (272) 155 156
    taka (273) 86 87 156
    tthis (274)
    tnode (275)
    tin (276) 8
    tindent (277) 16 119 160 163
    tdedent (278) 16 119 160 163
    tnull (279) 142
    teof <intVal> (280) 151 169
    tnum <floatVal> (281) 22
    tbool <boolVal> (282) 21
    tchar <charVal> (283) 24
    tstr <strVal> (284) 23
    tfctor <strVal> (285) 143
    tfdtor <strVal> (286) 144
    tfget <strVal> (287) 124
    tfset <strVal> (288) 125
    tfres <strVal> (289)
    tnormalId <strVal> (290) 1 27 57 61 62 63 64 65 66 67 86 87 94 102 104 106 156
    taccessedId <strVal> (291) 2
    tconName <strVal> (292) 79 81
    teol (293) 3 4 16 119 129 150 153 160 163 167
    topDefAssign (294) 73 74 75
    topMinusAssign (295) 62
    topSquareAssign (296) 63
    topDivideAssign (297) 64
    topModAssign (298) 65
    topPowAssign (299) 66
    topLessEqual (300) 46
    topMoreEqual (301) 48
    topEqual (302) 49
    topRefEqual (303) 50
    topNotEqual (304) 51
    topNotRefEqual (305) 52
    topPlusAssign (306) 61
    topSeq (307) 101
    topSafeNavi (308) 106 107
    topUplus (309) 34 35
    topUminus (310) 36 37


Nonterminals, with rules where they appear

    $accept (78)
        on left: 0
    tid <strVal> (79)
        on left: 1 2
        on right: 8 73 74 75 108 109 115 116 130 131 132 133 136 138 145
    telseBlock <node> (80)
        on left: 3
        on right: 17 19
    telifBlock <node> (81)
        on left: 4
        on right: 5 6
    telifBlocks <nodes> (82)
        on left: 5 6
        on right: 6 17 18
    tbranch <node> (83)
        on left: 7
        on right: 4 17 18 19 20
    termFor <node> (84)
        on left: 8 9
        on right: 55
    tcaseExpr <node> (85)
        on left: 10 11
        on right: 11 12
    tcaseStmt <node> (86)
        on left: 12 13
        on right: 14 15
    tcaseIndentBlock <node> (87)
        on left: 14 15
        on right: 15 16
    tswitchExpr <node> (88)
        on left: 16
        on right: 25
    termIf <node> (89)
        on left: 17 18 19 20
        on right: 59
    trhsIdExpr <node> (90)
        on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
        on right: 7 8 9 10 11 33 34 35 36 37 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 61 62 63 64 65 66 67 73 74 85 88 89 90 91 92 96 101 102 103 106 107 114 115 116 117 118 132 133 146 164
    tdefBlockExpr <node> (91)
        on left: 68 69 70 71 72
        on right: 78
    tdefexpr <node> (92)
        on left: 73 74 75 76 77 78
        on right: 29 152 153 159 161
    tconNames <node> (93)
        on left: 79 80 81 82
        on right: 80 82 84
    ttype <node> (94)
        on left: 83 84
        on right: 74 75 81 82 88 108 136 137 139
    tconAccess <node> (95)
        on left: 85
        on right: 38
    takaStmt <node> (96)
        on left: 86 87
        on right: 77
    tcast <node> (97)
        on left: 88
        on right: 30
    treturnexpr <node> (98)
        on left: 89 90
        on right: 147 165
    trhsIds <node> (99)
        on left: 91 92
        on right: 92 93 100
    trhslist <node> (100)
        on left: 93
        on right: 112
    tlhsId <node> (101)
        on left: 94 95
        on right: 16 83 85 86 104 105 154 155 156
    ttuple <node> (102)
        on left: 96
        on right: 97 98
    ttuples <node> (103)
        on left: 97 98
        on right: 98 99
    tmap <node> (104)
        on left: 99
        on right: 28
    tarray <node> (105)
        on left: 100
        on right: 26
    tseq <node> (106)
        on left: 101
        on right: 56
    taccess <node> (107)
        on left: 102 103
        on right: 32
    tpackAccess <node> (108)
        on left: 104 105
        on right: 95
    tsafeAccess <node> (109)
        on left: 106 107
        on right: 31
    tparam <node> (110)
        on left: 108 109
        on right: 76 110 111
    tparams <node> (111)
        on left: 110 111
        on right: 111 135
    tfuncRhsList <node> (112)
        on left: 112 113 114
        on right: 116 118 131 132 145
    tpropexpr <node> (113)
        on left: 115 116 117 118
        on right: 70
    tpropIndentBlock <node> (114)
        on left: 119 120 121
        on right: 115 116 117 118
    tpropBlock <node> (115)
        on left: 122 123
        on right: 119 123
    tgetsetFuncName <node> (116)
        on left: 124 125
        on right: 128
    tgetsetList <node> (117)
        on left: 126 127
        on right: 128
    tgetsetterExpr <node> (118)
        on left: 128
        on right: 120 129
    tgetsetterStmt <node> (119)
        on left: 129
        on right: 122 123
    tdefOrigin <node> (120)
        on left: 130 131 132 133
        on right: 69
    tfunclist <node> (121)
        on left: 134 135
        on right: 126 136 137 138 139 140 143 144
    tfunc <node> (122)
        on left: 136 137 138 139 140
        on right: 68 87
    tfuncBody <node> (123)
        on left: 141 142
        on right: 136 137 138 139 140
    tctorfunc <node> (124)
        on left: 143
        on right: 71
    tdtorfunc <node> (125)
        on left: 144
        on right: 72
    tfuncCall <node> (126)
        on left: 145
        on right: 60 103 105 107
    texpr <node> (127)
        on left: 146 147 148
        on right: 149 150
    tblock <node> (128)
        on left: 149 150 151
        on right: 150 151 163
    tdefBlock <node> (129)
        on left: 152 153
        on right: 153 160
    tpackExpr <node> (130)
        on left: 154
        on right: 157
    timportExpr <node> (131)
        on left: 155 156
        on right: 158
    tfileExpr <node> (132)
        on left: 157 158 159
        on right: 167 168
    tdefIndentBlock <node> (133)
        on left: 160 161 162
        on right: 130 131 132 133
    tindentBlock <node> (134)
        on left: 163 164 165 166
        on right: 3 7 8 9 12 13 57 58 128 141 143 144
    tfile <node> (135)
        on left: 167 168 169
        on right: 0 167 169


State 0

    0 $accept: • tfile $end

    tpack        shift, and go to state 1
    tas          shift, and go to state 2
    tdef         shift, and go to state 3
    tprop        shift, and go to state 4
    timport      shift, and go to state 5
    tfctor       shift, and go to state 6
    tfdtor       shift, and go to state 7
    tnormalId    shift, and go to state 8
    taccessedId  shift, and go to state 9
    '('          shift, and go to state 10
    '@'          shift, and go to state 11

    tid            go to state 12
    tdefBlockExpr  go to state 13
    tdefexpr       go to state 14
    takaStmt       go to state 15
    tlhsId         go to state 16
    tpackAccess    go to state 17
    tparam         go to state 18
    tpropexpr      go to state 19
    tdefOrigin     go to state 20
    tfunclist      go to state 21
    tfunc          go to state 22
    tctorfunc      go to state 23
    tdtorfunc      go to state 24
    tpackExpr      go to state 25
    timportExpr    go to state 26
    tfileExpr      go to state 27
    tfile          go to state 28


State 1

  154 tpackExpr: tpack • tlhsId

    tnormalId  shift, and go to state 29

    tlhsId       go to state 30
    tpackAccess  go to state 17


State 2

  137 tfunc: tas • tfunclist ttype tfuncBody

    '('  shift, and go to state 10

    tfunclist  go to state 31


State 3

  130 tdefOrigin: tdef • tid tdefIndentBlock
  131           | tdef • tid tfuncRhsList tdefIndentBlock
  132           | tdef • tid tfuncRhsList tfrom trhsIdExpr tdefIndentBlock
  133           | tdef • tid tfrom trhsIdExpr tdefIndentBlock

    tnormalId    shift, and go to state 32
    taccessedId  shift, and go to state 9

    tid  go to state 33


State 4

  115 tpropexpr: tprop • tid tfrom trhsIdExpr tpropIndentBlock
  116          | tprop • tid tfuncRhsList tfrom trhsIdExpr tpropIndentBlock
  117          | tprop • tfrom trhsIdExpr tpropIndentBlock
  118          | tprop • tfuncRhsList tfrom trhsIdExpr tpropIndentBlock

    tfrom        shift, and go to state 34
    tnormalId    shift, and go to state 32
    taccessedId  shift, and go to state 9
    '('          shift, and go to state 35

    tid           go to state 36
    trhslist      go to state 37
    tfuncRhsList  go to state 38


State 5

  155 timportExpr: timport • tlhsId
  156            | timport • tlhsId taka tnormalId

    tnormalId  shift, and go to state 29

    tlhsId       go to state 39
    tpackAccess  go to state 17


State 6

  143 tctorfunc: tfctor • tfunclist tindentBlock

    '('  shift, and go to state 10

    tfunclist  go to state 40


State 7

  144 tdtorfunc: tfdtor • tfunclist tindentBlock

    '('  shift, and go to state 10

    tfunclist  go to state 41


State 8

    1 tid: tnormalId •
   94 tlhsId: tnormalId •

    taka      reduce using rule 94 (tlhsId)
    '.'       reduce using rule 94 (tlhsId)
    $default  reduce using rule 1 (tid)


State 9

    2 tid: taccessedId •

    $default  reduce using rule 2 (tid)


State 10

  134 tfunclist: '(' • ')'
  135          | '(' • tparams ')'

    tnormalId    shift, and go to state 32
    taccessedId  shift, and go to state 9
    ')'          shift, and go to state 42
    '@'          shift, and go to state 11

    tid      go to state 43
    tparam   go to state 44
    tparams  go to state 45


State 11

  109 tparam: '@' • tid

    tnormalId    shift, and go to state 32
    taccessedId  shift, and go to state 9

    tid  go to state 46


State 12

   73 tdefexpr: tid • topDefAssign trhsIdExpr
   74         | tid • ttype topDefAssign trhsIdExpr
   75         | tid • ttype topDefAssign '{' '}'
  108 tparam: tid • ttype
  136 tfunc: tid • tfunclist ttype tfuncBody
  138      | tid • tfunclist tfuncBody

    tnormalId     shift, and go to state 29
    tconName      shift, and go to state 47
    topDefAssign  shift, and go to state 48
    '('           shift, and go to state 10

    tconNames    go to state 49
    ttype        go to state 50
    tlhsId       go to state 51
    tpackAccess  go to state 17
    tfunclist    go to state 52


State 13

   78 tdefexpr: tdefBlockExpr •

    $default  reduce using rule 78 (tdefexpr)


State 14

  159 tfileExpr: tdefexpr •

    $default  reduce using rule 159 (tfileExpr)


State 15

   77 tdefexpr: takaStmt •

    $default  reduce using rule 77 (tdefexpr)


State 16

   86 takaStmt: tlhsId • taka tnormalId
  104 tpackAccess: tlhsId • '.' tnormalId
  105            | tlhsId • '.' tfuncCall

    taka  shift, and go to state 53
    '.'   shift, and go to state 54


State 17

   95 tlhsId: tpackAccess •

    $default  reduce using rule 95 (tlhsId)


State 18

   76 tdefexpr: tparam •

    $default  reduce using rule 76 (tdefexpr)


State 19

   70 tdefBlockExpr: tpropexpr •

    $default  reduce using rule 70 (tdefBlockExpr)


State 20

   69 tdefBlockExpr: tdefOrigin •

    $default  reduce using rule 69 (tdefBlockExpr)


State 21

  139 tfunc: tfunclist • ttype tfuncBody
  140      | tfunclist • tfuncBody

    tnormalId  shift, and go to state 29
    tconName   shift, and go to state 47
    teol       shift, and go to state 55
    '='        shift, and go to state 56
    ':'        shift, and go to state 57

    tconNames     go to state 49
    ttype         go to state 58
    tlhsId        go to state 51
    tpackAccess   go to state 17
    tfuncBody     go to state 59
    tindentBlock  go to state 60


State 22

   68 tdefBlockExpr: tfunc •
   87 takaStmt: tfunc • taka tnormalId

    taka  shift, and go to state 61

    taka      [reduce using rule 68 (tdefBlockExpr)]
    $default  reduce using rule 68 (tdefBlockExpr)


State 23

   71 tdefBlockExpr: tctorfunc •

    $default  reduce using rule 71 (tdefBlockExpr)


State 24

   72 tdefBlockExpr: tdtorfunc •

    $default  reduce using rule 72 (tdefBlockExpr)


State 25

  157 tfileExpr: tpackExpr •

    $default  reduce using rule 157 (tfileExpr)


State 26

  158 tfileExpr: timportExpr •

    $default  reduce using rule 158 (tfileExpr)


State 27

  168 tfile: tfileExpr •

    $default  reduce using rule 168 (tfile)


State 28

    0 $accept: tfile • $end
  167 tfile: tfile • teol tfileExpr
  169      | tfile • teof

    $end  shift, and go to state 62
    teof  shift, and go to state 63
    teol  shift, and go to state 64


State 29

   94 tlhsId: tnormalId •

    $default  reduce using rule 94 (tlhsId)


State 30

  104 tpackAccess: tlhsId • '.' tnormalId
  105            | tlhsId • '.' tfuncCall
  154 tpackExpr: tpack tlhsId •

    '.'  shift, and go to state 54

    $default  reduce using rule 154 (tpackExpr)


State 31

  137 tfunc: tas tfunclist • ttype tfuncBody

    tnormalId  shift, and go to state 29
    tconName   shift, and go to state 47

    tconNames    go to state 49
    ttype        go to state 65
    tlhsId       go to state 51
    tpackAccess  go to state 17


State 32

    1 tid: tnormalId •

    $default  reduce using rule 1 (tid)


State 33

  130 tdefOrigin: tdef tid • tdefIndentBlock
  131           | tdef tid • tfuncRhsList tdefIndentBlock
  132           | tdef tid • tfuncRhsList tfrom trhsIdExpr tdefIndentBlock
  133           | tdef tid • tfrom trhsIdExpr tdefIndentBlock

    tfrom  shift, and go to state 66
    teol   shift, and go to state 67
    '('    shift, and go to state 35
    ':'    shift, and go to state 68

    teol      [reduce using rule 162 (tdefIndentBlock)]
    '('       [reduce using rule 162 (tdefIndentBlock)]
    ':'       [reduce using rule 162 (tdefIndentBlock)]
    $default  reduce using rule 162 (tdefIndentBlock)

    trhslist         go to state 37
    tfuncRhsList     go to state 69
    tdefIndentBlock  go to state 70


State 34

  117 tpropexpr: tprop tfrom • trhsIdExpr tpropIndentBlock

    tswitch      shift, and go to state 71
    tas          shift, and go to state 2
    tfor         shift, and go to state 72
    tdef         shift, and go to state 3
    twith        shift, and go to state 73
    tif          shift, and go to state 74
    tprop        shift, and go to state 4
    tnum         shift, and go to state 75
    tbool        shift, and go to state 76
    tchar        shift, and go to state 77
    tstr         shift, and go to state 78
    tfctor       shift, and go to state 6
    tfdtor       shift, and go to state 7
    tnormalId    shift, and go to state 79
    taccessedId  shift, and go to state 9
    topUplus     shift, and go to state 80
    topUminus    shift, and go to state 81
    '('          shift, and go to state 82
    '{'          shift, and go to state 83
    '@'          shift, and go to state 11

    tid            go to state 84
    termFor        go to state 85
    tswitchExpr    go to state 86
    termIf         go to state 87
    trhsIdExpr     go to state 88
    tdefBlockExpr  go to state 13
    tdefexpr       go to state 89
    tconAccess     go to state 90
    takaStmt       go to state 15
    tcast          go to state 91
    tlhsId         go to state 92
    tmap           go to state 93
    tarray         go to state 94
    tseq           go to state 95
    taccess        go to state 96
    tpackAccess    go to state 17
    tsafeAccess    go to state 97
    tparam         go to state 18
    tpropexpr      go to state 19
    tdefOrigin     go to state 20
    tfunclist      go to state 21
    tfunc          go to state 22
    tctorfunc      go to state 23
    tdtorfunc      go to state 24
    tfuncCall      go to state 98


State 35

   93 trhslist: '(' • trhsIds ')'
  113 tfuncRhsList: '(' • ')'
  114             | '(' • trhsIdExpr ')'

    tswitch      shift, and go to state 71
    tas          shift, and go to state 2
    tfor         shift, and go to state 72
    tdef         shift, and go to state 3
    twith        shift, and go to state 73
    tif          shift, and go to state 74
    tprop        shift, and go to state 4
    tnum         shift, and go to state 75
    tbool        shift, and go to state 76
    tchar        shift, and go to state 77
    tstr         shift, and go to state 78
    tfctor       shift, and go to state 6
    tfdtor       shift, and go to state 7
    tnormalId    shift, and go to state 79
    taccessedId  shift, and go to state 9
    topUplus     shift, and go to state 80
    topUminus    shift, and go to state 81
    '('          shift, and go to state 82
    ')'          shift, and go to state 99
    '{'          shift, and go to state 83
    '@'          shift, and go to state 11

    tid            go to state 84
    termFor        go to state 85
    tswitchExpr    go to state 86
    termIf         go to state 87
    trhsIdExpr     go to state 100
    tdefBlockExpr  go to state 13
    tdefexpr       go to state 89
    tconAccess     go to state 90
    takaStmt       go to state 15
    tcast          go to state 91
    trhsIds        go to state 101
    tlhsId         go to state 92
    tmap           go to state 93
    tarray         go to state 94
    tseq           go to state 95
    taccess        go to state 96
    tpackAccess    go to state 17
    tsafeAccess    go to state 97
    tparam         go to state 18
    tpropexpr      go to state 19
    tdefOrigin     go to state 20
    tfunclist      go to state 21
    tfunc          go to state 22
    tctorfunc      go to state 23
    tdtorfunc      go to state 24
    tfuncCall      go to state 98


State 36

  115 tpropexpr: tprop tid • tfrom trhsIdExpr tpropIndentBlock
  116          | tprop tid • tfuncRhsList tfrom trhsIdExpr tpropIndentBlock

    tfrom  shift, and go to state 102
    '('    shift, and go to state 35

    trhslist      go to state 37
    tfuncRhsList  go to state 103


State 37

  112 tfuncRhsList: trhslist •

    $default  reduce using rule 112 (tfuncRhsList)


State 38

  118 tpropexpr: tprop tfuncRhsList • tfrom trhsIdExpr tpropIndentBlock

    tfrom  shift, and go to state 104


State 39

  104 tpackAccess: tlhsId • '.' tnormalId
  105            | tlhsId • '.' tfuncCall
  155 timportExpr: timport tlhsId •
  156            | timport tlhsId • taka tnormalId

    taka  shift, and go to state 105
    '.'   shift, and go to state 54

    $default  reduce using rule 155 (timportExpr)


State 40

  143 tctorfunc: tfctor tfunclist • tindentBlock

    teol  shift, and go to state 55
    ':'   shift, and go to state 57

    tindentBlock  go to state 106


State 41

  144 tdtorfunc: tfdtor tfunclist • tindentBlock

    teol  shift, and go to state 55
    ':'   shift, and go to state 57

    tindentBlock  go to state 107


State 42

  134 tfunclist: '(' ')' •

    $default  reduce using rule 134 (tfunclist)


State 43

  108 tparam: tid • ttype

    tnormalId  shift, and go to state 29
    tconName   shift, and go to state 47

    tconNames    go to state 49
    ttype        go to state 108
    tlhsId       go to state 51
    tpackAccess  go to state 17


State 44

  110 tparams: tparam •

    $default  reduce using rule 110 (tparams)


State 45

  111 tparams: tparams • ',' tparam
  135 tfunclist: '(' tparams • ')'

    ','  shift, and go to state 109
    ')'  shift, and go to state 110


State 46

  109 tparam: '@' tid •

    $default  reduce using rule 109 (tparam)


State 47

   79 tconNames: tconName • '{' '}'
   81          | tconName • '{' ttype '}'

    '{'  shift, and go to state 111


State 48

   73 tdefexpr: tid topDefAssign • trhsIdExpr

    tswitch      shift, and go to state 71
    tas          shift, and go to state 2
    tfor         shift, and go to state 72
    tdef         shift, and go to state 3
    twith        shift, and go to state 73
    tif          shift, and go to state 74
    tprop        shift, and go to state 4
    tnum         shift, and go to state 75
    tbool        shift, and go to state 76
    tchar        shift, and go to state 77
    tstr         shift, and go to state 78
    tfctor       shift, and go to state 6
    tfdtor       shift, and go to state 7
    tnormalId    shift, and go to state 79
    taccessedId  shift, and go to state 9
    topUplus     shift, and go to state 80
    topUminus    shift, and go to state 81
    '('          shift, and go to state 82
    '{'          shift, and go to state 83
    '@'          shift, and go to state 11

    tid            go to state 84
    termFor        go to state 85
    tswitchExpr    go to state 86
    termIf         go to state 87
    trhsIdExpr     go to state 112
    tdefBlockExpr  go to state 13
    tdefexpr       go to state 89
    tconAccess     go to state 90
    takaStmt       go to state 15
    tcast          go to state 91
    tlhsId         go to state 92
    tmap           go to state 93
    tarray         go to state 94
    tseq           go to state 95
    taccess        go to state 96
    tpackAccess    go to state 17
    tsafeAccess    go to state 97
    tparam         go to state 18
    tpropexpr      go to state 19
    tdefOrigin     go to state 20
    tfunclist      go to state 21
    tfunc          go to state 22
    tctorfunc      go to state 23
    tdtorfunc      go to state 24
    tfuncCall      go to state 98


State 49

   80 tconNames: tconNames • '{' '}'
   82          | tconNames • '{' ttype '}'
   84 ttype: tconNames •

    '{'  shift, and go to state 113

    '{'       [reduce using rule 84 (ttype)]
    $default  reduce using rule 84 (ttype)


State 50

   74 tdefexpr: tid ttype • topDefAssign trhsIdExpr
   75         | tid ttype • topDefAssign '{' '}'
  108 tparam: tid ttype •

    topDefAssign  shift, and go to state 114

    $default  reduce using rule 108 (tparam)


State 51

   83 ttype: tlhsId •
  104 tpackAccess: tlhsId • '.' tnormalId
  105            | tlhsId • '.' tfuncCall

    '.'  shift, and go to state 54

    '.'       [reduce using rule 83 (ttype)]
    $default  reduce using rule 83 (ttype)


State 52

  136 tfunc: tid tfunclist • ttype tfuncBody
  138      | tid tfunclist • tfuncBody

    tnormalId  shift, and go to state 29
    tconName   shift, and go to state 47
    teol       shift, and go to state 55
    '='        shift, and go to state 56
    ':'        shift, and go to state 57

    tconNames     go to state 49
    ttype         go to state 115
    tlhsId        go to state 51
    tpackAccess   go to state 17
    tfuncBody     go to state 116
    tindentBlock  go to state 60


State 53

   86 takaStmt: tlhsId taka • tnormalId

    tnormalId  shift, and go to state 117


State 54

  104 tpackAccess: tlhsId '.' • tnormalId
  105            | tlhsId '.' • tfuncCall

    tnormalId    shift, and go to state 118
    taccessedId  shift, and go to state 9

    tid        go to state 119
    tfuncCall  go to state 120


State 55

  163 tindentBlock: teol • tindent tblock tdedent

    tindent  shift, and go to state 121


State 56

  142 tfuncBody: '=' • tnull

    tnull  shift, and go to state 122


State 57

  164 tindentBlock: ':' • trhsIdExpr
  165             | ':' • treturnexpr
  166             | ':' • tnext

    tswitch      shift, and go to state 71
    tas          shift, and go to state 2
    tfor         shift, and go to state 72
    tdef         shift, and go to state 3
    twith        shift, and go to state 73
    tret         shift, and go to state 123
    treturn      shift, and go to state 124
    tif          shift, and go to state 74
    tnext        shift, and go to state 125
    tprop        shift, and go to state 4
    tnum         shift, and go to state 75
    tbool        shift, and go to state 76
    tchar        shift, and go to state 77
    tstr         shift, and go to state 78
    tfctor       shift, and go to state 6
    tfdtor       shift, and go to state 7
    tnormalId    shift, and go to state 79
    taccessedId  shift, and go to state 9
    topUplus     shift, and go to state 80
    topUminus    shift, and go to state 81
    '('          shift, and go to state 82
    '{'          shift, and go to state 83
    '@'          shift, and go to state 11
